--- a/crwn-clothing/src/components/menu-item/menu-item-styles.scss
+++ b/crwn-clothing/src/components/menu-item/menu-item-styles.scss
@@ -1,16 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
 
 .menu-item {
   min-width: 30%;
@@ -22,6 +9,23 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
 
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(.25, .45, .45, .95);
+    }
+
+    & .content {
+      opacity: .9;
+    }
+  }
+
+  &.large {
+    height: 380px;
+  }
+
   &:first-child {
     margin-right: 7.5px;
   }
@@ -30,6 +34,13 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+  }
+  
   .content {
     height: 90px;
     padding: 0 25px;
@@ -38,6 +49,9 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    position: absolute;
+    background-color: white;
+    opacity: .7;
 
     .title {
       font-weight: bold;
