remove logger for production, change font

--- a/crwn-clothing/src/components/sign-in/sign-in-styles.scss
+++ b/crwn-clothing/src/components/sign-in/sign-in-styles.scss
@@ -10,5 +10,10 @@
   .buttons {
     display: flex;
     justify-content: space-between;
+    
+  }
+
+  .custom-button {
+    font-size: 1.5vh;
   }
 }
